# diplopia

./: CMakeLists.txt  Readme.md
include/: diplopia.h  filesystem.h  list.h  md5.h
old/: doublon.sh
src/: Makefile  diplopia.c  filesystem.c  md5.c
test/: list_test.c  md5_test.c
utils/: diplopia-utils.c
